@@ -1,5 +1,9 @@
 2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	* build-kernel.sh: Tidy up --help option and commenting.
+
+2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	Upgrade the script for building a kernel from the command
 	line. This is not part of the official release, but can be
 	convenient for developers.
